<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_halqiyah"
        android:title="@string/Halqiyah"
        app:showAsAction="never"/>

    <item android:id="@+id/action_lahatiyah"
        android:title="@string/Lahaiyah"
        app:showAsAction="never"/>t

    <item android:id="@+id/action_shajariyah"
        android:title="@string/Shajariyah_Haafiyah"
        app:showAsAction="never"/>
    <item android:id="@+id/action_tarfiyah"
        android:title="@string/Tarfiyah"
        app:showAsAction="never"/>
    <item android:id="@+id/action_nitEeyah"
        android:title="@string/Nit_Eeeyah"
        app:showAsAction="never"/>
    <item android:id="@+id/action_lisaveyah"
        android:title="@string/Lisaveyah"
        app:showAsAction="never"/>
    <item android:id="@+id/action_ghunna"
        android:title="@string/Ghunna"
        app:showAsAction="never"/>
</menu>